tests/error/compiletime_error_iteration_limit_loop/identity.nim
func identity*(n: int): int =
  static:
    for i in 1 .. 10_000_001:
      discard
